tests/e2e/pass/m14_debug.ep
# EXIT: 0
type DebugToken {
    kind: i64
    value: i64
}
fun main(): void {
    let tokens = new DebugToken[]
    push(tokens, new DebugToken)
    push(tokens, new DebugToken)
    push(tokens, new DebugToken)
    tokens.data[2].kind = 42
    os.ExitProcess(0)
}
