tests/e2e/fail/nested_array_mismatch.ep
# COMPILE_ERROR: push value type u8[] is not assignable to i64[]
fun main(): void {
    let rows = new i64[][]
    push(rows, new u8[])
}
